--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-intl": "^3.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
     "sass": "^1.69.3",
     "scss": "^0.2.4"
   }
