--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.6.1",
+    "debug": "^4.3.4",
+    "mongoose": "^8.0.0",
     "next": "13.5.4",
+    "next-auth": "^4.24.4",
     "next-intl": "^3.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
     "sass": "^1.69.3",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "supports-color": "^9.4.0",
+    "swr": "^2.2.4"
   }
 }
