--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "debug": "^4.3.4",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "next": "13.5.4",
     "next-auth": "^4.24.4",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.69.3",
     "scss": "^0.2.4",
     "supports-color": "^9.4.0",
