--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-transition-group": "^4.4.5",
     "sass": "^1.69.3",
     "scss": "^0.2.4",
+    "sharp": "^0.33.0",
     "supports-color": "^9.4.0",
     "swr": "^2.2.4"
   }
