--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.1",
     "debug": "^4.3.4",
     "moment": "^2.29.4",
