--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "^4.3.4",
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "next-intl": "^3.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
