--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "next": "^14.2.3",
-    "next-intl": "^3.0.0-beta.19",
+    "next-intl": "^3.12.2",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
